unpackaged/main/default/objects/Activity/fields/Account_Num_Open_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Account_Num_Open_Opportunities__c</fullName>
    <label>Account: # Open Opportunities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>