unpackaged/main/default/objects/Activity/fields/Activity_Date_Weekday__c.field-meta.xml
<CustomField>
    <fullName>Activity_Date_Weekday__c</fullName>
    <formula>CASE(WEEKDAY(ActivityDate),
 1,&quot;Sunday&quot;,
 2,&quot;Monday&quot;,
 3,&quot;Tuesday&quot;,
 4,&quot;Wednesday&quot;,
 5,&quot;Thursday&quot;,
 6,&quot;Friday&quot;,
 7,&quot;Saturday&quot;,
 NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Activity Date Weekday</label>
    <type>Text</type>
</CustomField>