unpackaged/main/default/objects/Activity/fields/Activity_ID_case_safe__c.field-meta.xml
<CustomField>
    <fullName>Activity_ID_case_safe__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Activity ID (case safe)</label>
    <type>Text</type>
</CustomField>