unpackaged/main/default/objects/Activity/fields/Automation_Interview_ID__c.field-meta.xml
<CustomField>
    <fullName>Automation_Interview_ID__c</fullName>
    <label>Automation Interview ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>