unpackaged/main/default/objects/Activity/fields/Booked_By_Department__c.field-meta.xml
<CustomField>
    <fullName>Booked_By_Department__c</fullName>
    <label>Booked By Department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Role_Department</valueSetName>
    </valueSet>
</CustomField>