unpackaged/main/default/objects/Activity/fields/Booked_By_Prospect_CP__c.field-meta.xml
<CustomField>
    <fullName>Booked_By_Prospect_CP__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>True if the meeting was booked by the prospect themselves via an online link. False if the meeting is booked via the Chili Piper Instant Booker by a Retool employee. (via Chili Piper)</inlineHelpText>
    <label>Booked by Prospect?</label>
    <type>Checkbox</type>
</CustomField>