unpackaged/main/default/objects/Activity/fields/Booked_By_Region__c.field-meta.xml
<CustomField>
    <fullName>Booked_By_Region__c</fullName>
    <label>Booked By Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Geo_Region</valueSetName>
    </valueSet>
</CustomField>