unpackaged/main/default/objects/Activity/fields/Booked_By_Role__c.field-meta.xml
<CustomField>
    <fullName>Booked_By_Role__c</fullName>
    <label>Booked By Role</label>
    <length>80</length>
    <type>Text</type>
</CustomField>