unpackaged/main/default/objects/Activity/fields/Booked_By_Sourcing_Category__c.field-meta.xml
<CustomField>
    <fullName>Booked_By_Sourcing_Category__c</fullName>
    <label>Booked By Sourcing Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Role_Sourcing_Category</valueSetName>
    </valueSet>
</CustomField>