unpackaged/main/default/objects/Activity/fields/Booked_By_Subregion__c.field-meta.xml
<CustomField>
    <fullName>Booked_By_Subregion__c</fullName>
    <label>Booked By Subregion</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Geo_Subregion</valueSetName>
    </valueSet>
</CustomField>