unpackaged/main/default/objects/Activity/fields/Bounced__c.field-meta.xml
<CustomField>
    <fullName>Bounced__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>True if this email bounced.</inlineHelpText>
    <label>Bounced?</label>
    <type>Checkbox</type>
</CustomField>