unpackaged/main/default/objects/Activity/fields/Calendly__InviteeUuid__c.field-meta.xml
<CustomField>
    <fullName>Calendly__InviteeUuid__c</fullName>
    <externalId>true</externalId>
    <label>InviteeUuid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>