unpackaged/main/default/objects/Activity/fields/Call_Recording_URL__c.field-meta.xml
<CustomField>
    <fullName>Call_Recording_URL__c</fullName>
    <description>Outreach Call recording url.</description>
    <inlineHelpText>Outreach Call recording url.</inlineHelpText>
    <label>Call Recording URL</label>
    <type>Url</type>
</CustomField>