unpackaged/main/default/objects/Activity/fields/Canceled_CP__c.field-meta.xml
<CustomField>
    <fullName>Canceled_CP__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>True if the meeting was cancelled by the prospect (via Chili Piper)</inlineHelpText>
    <label>Canceled?</label>
    <type>Checkbox</type>
</CustomField>