unpackaged/main/default/objects/Activity/fields/ChampifyIo__ChampifyEventId__c.field-meta.xml
<CustomField>
    <fullName>ChampifyIo__ChampifyEventId__c</fullName>
    <label>Champify Event Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>