unpackaged/main/default/objects/Activity/fields/ChampifyIo__IsCreatedByChampify__c.field-meta.xml
<CustomField>
    <fullName>ChampifyIo__IsCreatedByChampify__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Created By Champify</label>
    <type>Checkbox</type>
</CustomField>