unpackaged/main/default/objects/Activity/fields/Chili_Piper_Meeting_ID__c.field-meta.xml
<CustomField>
    <fullName>Chili_Piper_Meeting_ID__c</fullName>
    <externalId>true</externalId>
    <label>Chili Piper Meeting ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>