unpackaged/main/default/objects/Activity/fields/Customerio_Delivery_Id__c.field-meta.xml
<CustomField>
    <fullName>Customerio_Delivery_Id__c</fullName>
    <description>Unique Id from Databricks customerio_warehouse_exports.delivery_contents

External Systems Utilization: Polytomic</description>
    <inlineHelpText>Unique Id from Customerio messages</inlineHelpText>
    <label>Customerio Delivery Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>