unpackaged/main/default/objects/Activity/fields/Gong__Associated_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Gong__Associated_Opportunities__c</fullName>
    <label>Associated Opportunities</label>
    <type>TextArea</type>
</CustomField>