unpackaged/main/default/objects/Activity/fields/Gong__Gong_Participants_Emails__c.field-meta.xml
<CustomField>
    <fullName>Gong__Gong_Participants_Emails__c</fullName>
    <label>Gong Participants Emails</label>
    <type>TextArea</type>
</CustomField>