unpackaged/main/default/objects/Activity/fields/Gong__Meeting_Reschedule_Count__c.field-meta.xml
<CustomField>
    <fullName>Gong__Meeting_Reschedule_Count__c</fullName>
    <label># of Times Meeting Rescheduled</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>