unpackaged/main/default/objects/Activity/fields/Has_Replied__c.field-meta.xml
<CustomField>
    <fullName>Has_Replied__c</fullName>
    <description>TRUE if the email activity has a reply date value (from Outreach.io or Regie.ai).</description>
    <formula>IF( ISBLANK( Outreach_Replied_At__c ) &amp;&amp; ISBLANK(  regieai__RepliedAt__c  ), FALSE, TRUE )</formula>
    <inlineHelpText>TRUE if the email activity has a reply date value (from Outreach.io or Regie.ai).</inlineHelpText>
    <label>Has Replied?</label>
    <type>Checkbox</type>
</CustomField>