unpackaged/main/default/objects/Activity/fields/Integration_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Integration_Stamp__c</fullName>
    <label>Integration Stamp</label>
    <length>255</length>
    <type>Text</type>
</CustomField>