unpackaged/main/default/objects/Activity/fields/Meeting_Type_CP__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Type_CP__c</fullName>
    <inlineHelpText>Meeting type (via Chili Piper)</inlineHelpText>
    <label>Meeting Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>