unpackaged/main/default/objects/Activity/fields/Message_Direction__c.field-meta.xml
<CustomField>
    <fullName>Message_Direction__c</fullName>
    <label>Message Direction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Received</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>