unpackaged/main/default/objects/Activity/fields/Moment_Created__c.field-meta.xml
<CustomField>
    <fullName>Moment_Created__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Moment Created</label>
    <referenceTo>Moment__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>