unpackaged/main/default/objects/Activity/fields/No_Show_CP__c.field-meta.xml
<CustomField>
    <fullName>No_Show_CP__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>True if the prospect did not show up to the meeting (via Chili Piper)</inlineHelpText>
    <label>No show?</label>
    <type>Checkbox</type>
</CustomField>