unpackaged/main/default/objects/Activity/fields/Ops_Notes__c.field-meta.xml
<CustomField>
    <fullName>Ops_Notes__c</fullName>
    <description>Field for system stamped notes, or bulk upload details for RevOps team.</description>
    <inlineHelpText>Field for system stamped notes, or bulk upload details for RevOps team.</inlineHelpText>
    <label>Ops Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>