unpackaged/main/default/objects/Activity/fields/Outreach_Call_Duration__c.field-meta.xml
<CustomField>
    <fullName>Outreach_Call_Duration__c</fullName>
    <description>Identifies the total number of seconds the call lasted.</description>
    <inlineHelpText>Identifies the total number of seconds the call lasted.</inlineHelpText>
    <label>Outreach Call Duration</label>
    <length>255</length>
    <type>Text</type>
</CustomField>