unpackaged/main/default/objects/Activity/fields/Outreach_Email_Template_Name__c.field-meta.xml
<CustomField>
    <fullName>Outreach_Email_Template_Name__c</fullName>
    <description>The name given to the email template used in Outreach.</description>
    <inlineHelpText>The name given to the email template used in Outreach.</inlineHelpText>
    <label>Outreach Email Template Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>