unpackaged/main/default/objects/Activity/fields/Outreach_Opened_At__c.field-meta.xml
<CustomField>
    <fullName>Outreach_Opened_At__c</fullName>
    <description>Identifies the date and time the email was first opened.</description>
    <inlineHelpText>Identifies the date and time the email was first opened.</inlineHelpText>
    <label>Opened At</label>
    <type>DateTime</type>
</CustomField>