unpackaged/main/default/objects/Activity/fields/Outreach_Replied_At__c.field-meta.xml
<CustomField>
    <fullName>Outreach_Replied_At__c</fullName>
    <description>Identifies the date and time when the mail was replied to.</description>
    <inlineHelpText>Identifies the date and time when the mail was replied to.</inlineHelpText>
    <label>Replied At</label>
    <type>DateTime</type>
</CustomField>