unpackaged/main/default/objects/Activity/fields/Outreach_Reply_Sentiment__c.field-meta.xml
<CustomField>
    <fullName>Outreach_Reply_Sentiment__c</fullName>
    <description>Reply sentiment mapped from Outreach.</description>
    <inlineHelpText>Reply sentiment mapped from Outreach.</inlineHelpText>
    <label>Reply Sentiment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>