unpackaged/main/default/objects/Activity/fields/Outreach_Sequence_Name__c.field-meta.xml
<CustomField>
    <fullName>Outreach_Sequence_Name__c</fullName>
    <description>The name given to a Sequence in Outreach.</description>
    <inlineHelpText>The name given to a Sequence in Outreach.</inlineHelpText>
    <label>Sequence Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>