unpackaged/main/default/objects/Activity/fields/Outreach_Unsubscribed_At__c.field-meta.xml
<CustomField>
    <fullName>Outreach_Unsubscribed_At__c</fullName>
    <description>Identifies the date and time when the Prospect unsubscribed to this communication.</description>
    <inlineHelpText>Identifies the date and time when the Prospect unsubscribed to this communication.</inlineHelpText>
    <label>Unsubscribed At</label>
    <type>DateTime</type>
</CustomField>