unpackaged/main/default/objects/Activity/fields/Outreach_View_Count__c.field-meta.xml
<CustomField>
    <fullName>Outreach_View_Count__c</fullName>
    <description>The number of opens/views the email received.</description>
    <inlineHelpText>The number of opens/views the email received.</inlineHelpText>
    <label>View Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>