unpackaged/main/default/objects/Activity/fields/Owner_Segment__c.field-meta.xml
<CustomField>
    <fullName>Owner_Segment__c</fullName>
    <description>Owner attribution field used to stamp the Owner&#39;s assigned Segment.</description>
    <inlineHelpText>Owner attribution field used to stamp the Owner&#39;s assigned Segment.</inlineHelpText>
    <label>Owner Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Customer_Segment</valueSetName>
    </valueSet>
</CustomField>