unpackaged/main/default/objects/Activity/fields/regieai__Open_Count__c.field-meta.xml
<CustomField>
    <fullName>regieai__Open_Count__c</fullName>
    <description>Number of times the email was tracked as opened</description>
    <label>Open Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>