unpackaged/main/default/objects/Activity/fields/regieai__Regie_Prompt_name__c.field-meta.xml
<CustomField>
    <fullName>regieai__Regie_Prompt_name__c</fullName>
    <description>This is the name of the prompt used to generate customer communications with Regie.ai</description>
    <label>Regie Prompt Used</label>
    <length>60</length>
    <type>Text</type>
</CustomField>