unpackaged/main/default/objects/Activity/fields/regieai__Regie_status__c.field-meta.xml
<CustomField>
    <fullName>regieai__Regie_status__c</fullName>
    <description>Was Regie.ai used in the generation of the email? Can be &quot;Rapid Writer&quot;, &quot;Personalized&quot; or blank, which means Regie.ai is not used in the email</description>
    <label>Regie Generated</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Rapid Writer</fullName>
            </value>
            <value>
                <fullName>Personalizer</fullName>
            </value>
            <value>
                <fullName>Auto-pilot</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>