unpackaged/main/default/objects/Activity/fields/regieai__RepliedAt__c.field-meta.xml
<CustomField>
    <fullName>regieai__RepliedAt__c</fullName>
    <label>Replied At</label>
    <type>DateTime</type>
</CustomField>