unpackaged/main/default/objects/Activity/fields/regieai__SEP_Object_ID__c.field-meta.xml
<CustomField>
    <fullName>regieai__SEP_Object_ID__c</fullName>
    <label>SEP Object ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>