unpackaged/main/default/objects/Activity/fields/regieai__sequence_ID__c.field-meta.xml
<CustomField>
    <fullName>regieai__sequence_ID__c</fullName>
    <description>Sequence ID of the sequence that this activity was synced from.</description>
    <label>Sequence ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>