unpackaged/main/default/objects/Activity/fields/Response_Status_CP__c.field-meta.xml
<CustomField>
    <fullName>Response_Status_CP__c</fullName>
    <inlineHelpText>Tracks if an event has been Accepted, Declined, NotResponded, or Maybe/Tentative (via Chili Piper)</inlineHelpText>
    <label>Response Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>