unpackaged/main/default/objects/Activity/fields/Router_Name_CP__c.field-meta.xml
<CustomField>
    <fullName>Router_Name_CP__c</fullName>
    <inlineHelpText>The name of the Chili Piper Router a meeting was booked from. Only used when a meeting is booked via Concierge or Inbound Router.</inlineHelpText>
    <label>Router Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>