unpackaged/main/default/objects/Activity/fields/Sequence_Definition__c.field-meta.xml
<CustomField>
    <fullName>Sequence_Definition__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Sequence Definition</label>
    <referenceTo>Sequence_Definition__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>